// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlotPoint > hides category and actions when not provided 1`] = `
<div
  class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border p-3"
  data-slot="card"
>
  <div
    class="flex items-start gap-2"
  >
    <span
      class="text-gray-400 shrink-0 mt-0.5"
    >
      #
      3
    </span>
    <div
      class="flex-1"
    >
      <p
        class="mb-2"
      >
        <span
          class="inline-block px-1 mx-0.5 rounded bg-blue-100 text-blue-900 dark:bg-blue-900 dark:text-blue-100"
          title="Prometheus (character)"
        >
          Prometheus
        </span>
        <span>
           delivers 
        </span>
        <span
          class="inline-block px-1 mx-0.5 rounded bg-blue-100 text-blue-900 dark:bg-blue-900 dark:text-blue-100"
          title="Fire (object)"
        >
          Fire
        </span>
        <span>
           to humanity.
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`PlotPoint > renders plot point with highlighted mythemes and triggers actions 1`] = `
<div
  class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border p-3"
  data-slot="card"
>
  <div
    class="flex items-start gap-2"
  >
    <span
      class="text-gray-400 shrink-0 mt-0.5"
    >
      #
      3
    </span>
    <div
      class="flex-1"
    >
      <p
        class="mb-2"
      >
        <span
          class="inline-block px-1 mx-0.5 rounded bg-blue-100 text-blue-900 dark:bg-blue-900 dark:text-blue-100"
          title="Prometheus (character)"
        >
          Prometheus
        </span>
        <span>
           delivers 
        </span>
        <span
          class="inline-block px-1 mx-0.5 rounded bg-blue-100 text-blue-900 dark:bg-blue-900 dark:text-blue-100"
          title="Fire (object)"
        >
          Fire
        </span>
        <span>
           to humanity.
        </span>
      </p>
      <span
        class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-secondary/90 bg-slate-100 text-slate-700 dark:bg-slate-800 dark:text-slate-300"
        data-slot="badge"
      >
        Introduction
      </span>
    </div>
    <div
      class="flex items-center gap-1"
    >
      <button
        aria-label="Edit plot point"
        class="text-gray-400 hover:text-blue-600 transition-colors"
        type="button"
      >
        <svg
          class="lucide lucide-pencil w-4 h-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
          <path
            d="m15 5 4 4"
          />
        </svg>
      </button>
      <button
        aria-label="Delete plot point"
        class="text-gray-400 hover:text-red-600 transition-colors"
        type="button"
      >
        <svg
          class="lucide lucide-trash2 lucide-trash-2 w-4 h-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 6h18"
          />
          <path
            d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
          />
          <path
            d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
          />
          <line
            x1="10"
            x2="10"
            y1="11"
            y2="17"
          />
          <line
            x1="14"
            x2="14"
            y1="11"
            y2="17"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
